Fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
 }
 
 *, *::before, *::after {
-  box-sizing:inherit;
+  box-sizing: inherit;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
   background-color: #dbd6d0;
   margin: 0;
   margin-top: auto;
-  margin-bottom: 0.3em;
+  margin-bottom: .3em;
   margin-left: auto;
   margin-right: auto;
 }
@@ -31,23 +31,23 @@ h1 {
   margin: 0;
 }
 
+.nav {
+  color: #fff;
+  text-decoration: none;
+  margin: .3em;
+  list-style-type: none;
+  text-align: center;
+}
+
 .nav li {
   background-color: #713837;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  margin: 0.3em;
+  margin: .3em;
   max-width: 20em;
-  padding: 0.75em;
+  padding: .75em;
   border-radius: 3px;
-}
-
-.nav a:hover {
-  background-color: #f33;
-  text-decoration: none;
-  color: #fff;
-  max-width: 20em;
-  padding: 0.75em;
 }
 
 a {
@@ -56,6 +56,10 @@ a {
   border-radius: 8px;
 }
 
-a hover {
+.nav a:hover {
   background-color: #f33;
+  text-decoration: none;
+  color: #fff;
+  max-width: 20em;
+  padding: .75em;
 }
